syntax = "proto3";

package order;

option go_package = "microservices/proto";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);
}

message CreateOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse {
    string id = 1;
}

message GetOrdersRequest {}

message GetOrdersResponse {
    repeated Order orders = 1;
}

message Order {
    string id = 1;
    string product_id = 2;
    int32 quantity = 3;
}